---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 2025-03-20
  Features:
    - Added support for the sound PrintSettings.
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2024-12-29
  Scripting:
    - Added `"surface"` as a possible send level
  Bugfixes:
    - The lua commands now don't squash any output (but they now appear after the output..)
    - The evolution command now actually lists the evolutions for every surface
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2024-12-05
  Features:
    - Added an api for modifying sent messages. The intent being the ability to filter.
    - Actually expose ability to clear chatlog for a player.
  Commands:
    - Replicated /command & /c
      Will not replicate any output (like printed error) as that'd require running it a second time.
      Running the given code a second time will cause *tons* of unintended consequences.
    - Logged /silent-command & /sc
    - Replicated (kinda) /measured-command & /mc
      The measured time does not get saved as that's just unfeasible without running the code a second time.
      It also doesn't clear the engine's normal response as that'd clear the measured time.
  Bugfixes:
    - Fixed inconsistencies between clearing prints and regular prints. This was achieved by consolidating the functions more.
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2024-11-08
  Bugfixes:
    - Commands should no longer crash when entered from a server console
---------------------------------------------------------------------------------------------------
Version: 0.4.1